--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE HTML>
+  <html>
+    <head>
+      <title></title>
+      <meta lang='en'>
+      <meta charset='utf-8'>
+      </head>
+      <body>
+        <h1 id='title'>Satisfaction Survey</h1>
+        <h2 id='subtitle'>Vet Clinic "Healthy Paws"</h2>
+        <p id='description'>We value your time and feedback. Please fill out the form below.</p>
 
+        <form id='survey-form'></form>
+        </body>
+    </html>
