--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </fieldset>
 
       <fieldset>
-        <legend>Waiting time</legend>
+
         <label id="number-label" for="number">
           How much time did you wait in the waiting room (minutes)? 
           <input placeholder="15" id="number" type="number" name="waiting-time" min="0" max="480">
@@ -32,7 +32,7 @@
       </fieldset>
 
       <fieldset>
-        <legend>Who assisted you at the reception?</legend>
+        Who assisted you at the reception?
         <label for="dropdown">
           <select name="assistant-helped" id="dropdown" required>
             <option value="" disabled selected>Select</option>
@@ -44,7 +44,7 @@
       </fieldset>
 
       <fieldset>
-        <legend>Your furry friend is a...</legend>
+        Your furry friend is a...
         <label for="cat">
           <input id="cat" name="animal-type" type="radio" value="cat" checked> Cat
         </label>
@@ -52,26 +52,26 @@
           <input id="dog" name="animal-type" type="radio" value="dog"> Dog
         </label>
         <label for="bunny">
-          <input id="bunny" name="animal-type" type="radio" value="bunny"> Bunny
+          <input class='inline' id="bunny" name="animal-type" type="radio" value="bunny"> Bunny
         </label>
         <label for="other">
-          <input id="other" name="animal-type" type="radio" value="other"> Other
+          <input class='inline' id="other" name="animal-type" type="radio" value="other"> Other
         </label>
       </fieldset>
 
       <fieldset>
-        <legend>Which statement best describes our clinic? (You can select multiple choices)</legend>
+        Which statement best describes our clinic?
         <label>
-          <input name="clinic-description" type="checkbox" value="clean-and-tidy"> Clean and tidy
+          <input class='inline' name="clinic-description" type="checkbox" value="clean-and-tidy"> Clean and tidy
         </label>
         <label>
-          <input name="clinic-description" type="checkbox" value="friendly-and-cozy"> Friendly and cozy
+          <input class='inline' name="clinic-description" type="checkbox" value="friendly-and-cozy"> Friendly and cozy
         </label>
         <label>
-          <input name="clinic-description" type="checkbox" value="professional-and-helpful"> Professional and helpful
+          <input class='inline' name="clinic-description" type="checkbox" value="professional-and-helpful"> Professional and helpful
         </label>
         <label>
-          <input name="clinic-description" type="checkbox" value="calm-and-respectful"> Calm and respectful
+          <input class='inline' name="clinic-description" type="checkbox" value="calm-and-respectful"> Calm and respectful
         </label>
       </fieldset>
 
